# advent-of-code

./: .clippy.toml  .mise.toml  Cargo.toml  justfile
2015/: Cargo.toml
2015/benches/: bench.rs
2015/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs
2016/: Cargo.toml
2016/benches/: bench.rs
2016/src/: assembunny.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs
2017/: Cargo.toml
2017/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  knot_hash.rs  lib.rs
2017/src/day18/: vm.rs
2024/: Cargo.toml
2024/benches/: bench.rs
2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs
2025/: Cargo.toml
2025/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  lib.rs
cli/: Cargo.toml
cli/src/: commands.rs  inputs.rs  main.rs  style.rs
cli/src/commands/: bench.rs  setup.rs
collect/: Cargo.toml
collect/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  inputs.rs  main.rs  solutions.rs  style.rs
crates/cli/src/commands/: bench.rs  run.rs  setup.rs
crates/collect/: Cargo.toml
crates/register/: Cargo.toml
crates/register-macro/: Cargo.toml
crates/register-macro/src/: lib.rs
crates/register/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: grid.rs  input.rs  lib.rs  md5.rs  num.rs
harness/: Cargo.toml
harness/src/: bench.rs  cli.rs  lib.rs
utils/: Cargo.toml
utils/src/: hash.rs  input.rs  md5.rs  num.rs  ocr.rs
