[workspace]
members = ["20*", "cli", "collect", "utils"]
default-members = ["cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.89"
array-const-fn-init = "0.1.1"
arrayvec = "0.7.6"
clap = { version = "4.5.20", features = ["derive"] }
concat-idents = "1.1.5"
console = "0.15.10"
directories = "5.0.1"
indicatif = "0.17.9"
itertools = "0.13.0"
jiff = "0.1.16"
joinery = "3.1.0"
nom = "7.1.3"
num = "0.4.3"
num_cpus = "1.16.0"
once_cell = "1.20.2"
owo-colors = "4.1.0"
panic-message = "0.3.0"
rayon = "1.10.0"
reqwest = { version = "0.12.8", features = ["blocking"] }
rustc-hash = "2.0.0"
tinybitset = "0.0.2"

aoc2015 = { path = "2015" }
aoc2016 = { path = "2016" }
aoc2024 = { path = "2024" }
collect = { path = "collect" }
utils = { path = "utils" }

[workspace.lints.rust]
unused = { level = "warn", priority = -1 }
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "allow"  # Has false positives with `impl Trait`
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
match_on_vec_items = "allow"

[profile.release]
lto = "thin"
