[workspace]
members = ["20*", "crates/*"]
default-members = ["crates/cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
arrayvec = "0.7.6"
clap = { version = "4.5.53", features = ["derive"] }
concat-idents = "1.1.5"
console = "0.16.1"
const-array-init = "1.0.0"
directories = "6.0.0"
indicatif = "0.18.3"
itertools = "0.14.0"
jiff = "0.2.16"
joinery = "3.1.0"
linkme = "0.3.35"
nom = "8.0.0"
num = "0.4.3"
num_cpus = "1.17.0"
once_cell = "1.21.3"
panic-message = "0.3.0"
quote = "1.0.42"
rayon = "1.11.0"
rustc-hash = "2.1.1"
syn = { version = "2.0.110", features = ["full"] }
tinybitset = "0.0.2"
ureq = { version = "3.1.4", default-features = false, features = ["rustls"] }

aoc2015 = { path = "2015" }
aoc2016 = { path = "2016" }
aoc2017 = { path = "2017" }
aoc2024 = { path = "2024" }
aoc2025 = { path = "2025" }
register = { path = "crates/register" }
register-macro = { path = "crates/register-macro" }
utils = { path = "crates/utils" }

[workspace.lints.rust]
unused = { level = "warn", priority = -1 }
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "allow"  # Has false positives with `impl Trait`
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
match_on_vec_items = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
