[package]
name = "aoc2016"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
arrayvec = { workspace = true }
itertools = { workspace = true }
num = { workspace = true }
num_cpus = { workspace = true }
panic-message = { workspace = true }

register = { workspace = true }
utils = { workspace = true }

[lints]
workspace = true
