[package]
name = "aoc2024"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
array-const-fn-init.workspace = true
itertools.workspace = true
rayon.workspace = true

harness.workspace = true
utils.workspace = true

[lints]
workspace = true

[[bench]]
name = "bench"
harness = false
