[package]
name = "aoc2024"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
arrayvec.workspace = true
const-array-init.workspace = true
itertools.workspace = true
joinery.workspace = true
num.workspace = true
rayon.workspace = true
tinybitset.workspace = true

collect.workspace = true
utils.workspace = true

[lints]
workspace = true
