[package]
name = "aoc2025"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
arrayvec = { workspace = true }
const-array-init = { workspace = true }
itertools = { workspace = true }
ndarray = { workspace = true }

register = { workspace = true }
utils = { workspace = true }

[lints]
workspace = true
