[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
directories = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
jiff = { workspace = true }
once_cell = { workspace = true }
ureq = { workspace = true }

aoc2015 = { workspace = true }
aoc2016 = { workspace = true }
aoc2017 = { workspace = true }
aoc2024 = { workspace = true }
aoc2025 = { workspace = true }
register = { workspace = true }

[lints]
workspace = true
